--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,11 @@
       "@/*": ["./src/components/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "public/imagens/pastel.tsx"
+  ],
   "exclude": ["node_modules"]
 }
