--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@mui/material": "^5.15.13",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
