--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -23,6 +23,17 @@
         "uriFormat": "%s",
         "action": "debugWithChrome"
       }
+    },
+    {
+      "name": "Next.js: Prod debug full stack",
+      "type": "node-terminal",
+      "request": "launch",
+      "command": "npm run start",
+      "serverReadyAction": {
+        "pattern": "- Local:.+(https?://.+)",
+        "uriFormat": "%s",
+        "action": "debugWithChrome"
+      }
     }
   ]
 }
